// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AverageEngagementDuration when data is loaded renders a component with data loaded 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_average_engagement_time"
  >
    <span
      class="usa-tooltip"
    >
      <span
        aria-describedby="tooltip-550000"
        class="usa-tooltip__trigger"
        data-position="top"
        tabindex="0"
      >
        Average Engagement Time Per Session
      </span>
      <span
        aria-hidden="true"
        class="usa-tooltip__body"
        id="tooltip-550000"
        role="tooltip"
      >
        The average length of time in which users were engaged with the site or application per session.
      </span>
    </span>
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    >
      1 min 3 sec
    </div>
  </div>
</DocumentFragment>
`;

exports[`AverageEngagementDuration when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_average_engagement_time"
  >
    <span
      class="usa-tooltip"
    >
      <span
        aria-describedby="tooltip-550000"
        class="usa-tooltip__trigger"
        data-position="top"
        tabindex="0"
      >
        Average Engagement Time Per Session
      </span>
      <span
        aria-hidden="true"
        class="usa-tooltip__body"
        id="tooltip-550000"
        role="tooltip"
      >
        The average length of time in which users were engaged with the site or application per session.
      </span>
    </span>
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;

exports[`AverageEngagementDuration when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <a
    class="chart__title"
    href="/definitions#report_historical_average_engagement_time"
  >
    <span
      class="usa-tooltip"
    >
      <span
        aria-describedby="tooltip-550000"
        class="usa-tooltip__trigger"
        data-position="top"
        tabindex="0"
      >
        Average Engagement Time Per Session
      </span>
      <span
        aria-hidden="true"
        class="usa-tooltip__body"
        id="tooltip-550000"
        role="tooltip"
      >
        The average length of time in which users were engaged with the site or application per session.
      </span>
    </span>
  </a>
  <div>
    <div
      class="data chart__rate padding-top-05"
    />
  </div>
</DocumentFragment>
`;
